--- a/src/System.Text.Json/tests/System.Text.Json.Tests.csproj
+++ b/src/System.Text.Json/tests/System.Text.Json.Tests.csproj
@@ -34,6 +34,20 @@
     <Compile Include="Serialization\Array.WriteTests.cs" />
     <Compile Include="Serialization\CacheTests.cs" />
     <Compile Include="Serialization\CamelCaseUnitTests.cs" />
+    <Compile Include="Serialization\CustomConverterTests.Array.cs" />
+    <Compile Include="Serialization\CustomConverterTests.Attribute.cs" />
+    <Compile Include="Serialization\CustomConverterTests.BadConverters.cs" />
+    <Compile Include="Serialization\CustomConverterTests.cs" />
+    <Compile Include="Serialization\CustomConverterTests.Dictionary.cs" />
+    <Compile Include="Serialization\CustomConverterTests.Enum.cs" />
+    <Compile Include="Serialization\CustomConverterTests.Exceptions.cs" />
+    <Compile Include="Serialization\CustomConverterTests.Int32.cs" />
+    <Compile Include="Serialization\CustomConverterTests.List.cs" />
+    <Compile Include="Serialization\CustomConverterTests.Object.cs" />
+    <Compile Include="Serialization\CustomConverterTests.Point.cs" />
+    <Compile Include="Serialization\CustomConverterTests.Polymorphic.cs" />
+    <Compile Include="Serialization\CustomConverterTests.ReadAhead.cs" />
+    <Compile Include="Serialization\CustomConverterTests.Callback.cs" />
     <Compile Include="Serialization\CyclicTests.cs" />
     <Compile Include="Serialization\DictionaryTests.cs" />
     <Compile Include="Serialization\EnumTests.cs" />
